<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmentHomeEmpsUi"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/btnStr_home" />

    <item
        android:id="@+id/warehouseList"
        android:icon="@drawable/ic_round_local_convenience_store_24"
        android:title="@string/btnStr_warehouse" />


    <item
        android:id="@+id/officeList"
        android:icon="@drawable/ic_round_groups_24"
        android:title="@string/btnStr_office" />

    <item
        android:id="@+id/importList"
        android:icon="@drawable/ic_round_flight_land_24"
        android:title="@string/btnStr_import" >
    </item>
</menu>